crates/fec-cli/src/snapshots/libfec__api_flags__tests__urls_multiple_form_and_report_types.snap
---
source: crates/fec-cli/src/api_flags.rs
expression: "snapshot_urls(\"--committee C00401224 --form-type F3 --form-type F3X --report-type YE --report-type Q3 --cycle 2024 --cycle 2026\")"
snapshot_kind: text
---
flags: --committee C00401224 --form-type F3 --form-type F3X --report-type YE --report-type Q3 --cycle 2024 --cycle 2026

/v1/filings
  api_key: REDACTED
  per_page: 100
  most_recent: true
  filer_type: e-file
  committee_id: C00401224
  form_type: F3
  form_type: F3X
  report_type: YE
  report_type: Q3
  cycle: 2024
  cycle: 2026
  sort: committee_id

/v1/efile/filings
  api_key: REDACTED
  committee_id: C00401224
  form_type: F3
  form_type: F3X
  report_type: YE
  report_type: Q3
  per_page: 100
